--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "oers-search-ui",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.9.0",
+    "node": "10.16.3"
+  },
   "dependencies": {
     "@appbaseio/reactivesearch": "^3.0.3",
     "bootstrap": "^4.3.1",
