--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@appbaseio/reactivesearch": "^3.0.3",
     "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
